--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,28 +1,27 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.OrganiZen" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/gray_light</item>
-        <item name="colorPrimaryVariant">@color/gray_dark</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+    <style name="Theme.OrganiZen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/brown</item>
+        <item name="colorPrimaryVariant">@color/brown</item>
+        <item name="colorOnPrimary">@color/coral_light</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
     </style>
 
-    <style name="MainScreenCard">
+    <style name="MainScreenCard" parent="ShapeAppearance.MaterialComponents.MediumComponent">
         <item name="android:textAlignment">center</item>
         <item name="android:textSize">20dp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/coral_light</item>
         <item name="android:paddingLeft">20dp</item>
         <item name="android:paddingRight">20dp</item>
-        <item name="android:paddingTop">40dp</item>
-        <item name="android:paddingBottom">40dp</item>
-        <item name="android:layout_margin">10dp</item>
-        <item name="android:background">@color/gray_medium</item>
+        <item name="android:paddingTop">30dp</item>
+        <item name="android:paddingBottom">30dp</item>
+        <item name="android:background">@color/purple</item>
+    </style>
+
+    <style name="MaterialCardViewCut" parent="">
+        <item name="cornerFamily">cut</item>
+        <item name="cornerSize">15dp</item>
+        <item name="android:backgroundTint">@color/gray_medium</item>
+        <item name="elevation">10dp</item>
     </style>
 </resources>
