--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.OrganiZen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.OrganiZen" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/brown</item>
         <item name="colorPrimaryVariant">@color/brown</item>
         <item name="colorOnPrimary">@color/coral_light</item>
