--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.OrganiZen" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/orange</item>
         <item name="colorPrimaryVariant">@color/orange</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/orange</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
 
@@ -15,12 +15,12 @@
         <item name="android:paddingRight">20dp</item>
         <item name="android:paddingTop">30dp</item>
         <item name="android:paddingBottom">30dp</item>
-        <item name="android:background">@color/orange_light</item>
+        <item name="android:background">@color/orange</item>
     </style>
 
     <style name="MaterialCardViewCut" parent="">
-        <item name="cornerFamily">cut</item>
-        <item name="cornerSize">15dp</item>
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">25dp</item>
         <item name="android:backgroundTint">@color/gray_medium</item>
         <item name="elevation">10dp</item>
     </style>
